--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: submodule
+      run:  git submodule update --init
     - name: make
       run:  make
     - name: benchmark
